Add main.js script and adjust logo link href
Added a new JavaScript module `main.js` to enhance functionality and ensure proper behavior. Also updated the logo link's `href` attribute to address potential navigation inconsistencies.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="src/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/css/input.css" rel="stylesheet">
+    <script src="src/js/main.js" type="module"></script>
     <title>Vite App</title>
   </head>
 
@@ -13,7 +14,7 @@
 
     <header class="header">
 
-      <a class="logo" href="/">Site Logo</a>
+      <a class="logo" href=" ">Site Logo</a>
 
       <button class="switch-button" id="switch-button">
         <span class="w-12 h-12 relative -ml-2 rounded-full transition duration-300 transform bg-yellow-500 -translate-x-2 p-1 text-white" id="switch-toggle">
