Fix incorrect script path in index.html
Updated the script source path to use a relative reference (`./`). This ensures compatibility and correct loading of the JavaScript file.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,6 @@
     
   </div>
           <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.46.0/dist/apexcharts.min.js"></script>
-					<script type="module" src="/src/js/main.js"></script>
+					<script type="module" src="./src/js/main.js"></script>
 			</body>
 		</html>
